Update package versions; refactor to only use Gemini

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,9 +36,12 @@
     "@codemirror/lang-xml": "^6.1.0",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
+    "@langchain/anthropic": "^0.3.21",
     "@langchain/community": "^0.3.28",
-    "@langchain/core": "^0.3.38",
+    "@langchain/core": "^0.3.57",
+    "@langchain/google-genai": "^0.2.10",
     "@langchain/langgraph-sdk": "^0.0.40",
+    "@langchain/openai": "^0.5.11",
     "@mendable/firecrawl-js": "1.10.1",
     "@nextjournal/lang-clojure": "^1.0.0",
     "@opencanvas/shared": "*",
