feat: centralize agent model configuration

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,12 @@ FIREWORKS_API_KEY=""
 GOOGLE_API_KEY=""
 # Groq - STT
 GROQ_API_KEY=""
+# Default models for each agent (optional)
+AGENT_MODEL_OPEN_CANVAS=""
+AGENT_MODEL_SUMMARIZER=""
+AGENT_MODEL_REFLECTION=""
+AGENT_MODEL_THREAD_TITLE=""
+AGENT_MODEL_WEB_SEARCH=""
 # ------------------
 
 # Supabase
